<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/skyfi_archives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_button"
            android:visibility="gone"
            android:text="@string/previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cache_button"
            android:text="@string/cache_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_dark_button_bg"
            android:textColor="@android:color/white"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" />
            
        <Button
            android:id="@+id/filter_button"
            android:text="@string/aor_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_dark_button_bg"
            android:textColor="@android:color/white"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />
            
        <Button
            android:id="@+id/sort_button"
            android:text="@string/sort_by_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_dark_button_bg"
            android:textColor="@android:color/white"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/next_button"
            android:text="@string/next_page"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/archives_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>